@@ -43,7 +43,7 @@ straight through, but keep it handy for when you need to learn more
 about a particular command or group of commands.
 
 If you're doing something more unusual than a conversion, you'll
-Applprobably have to read through the command reference until
+probably have to read through the command reference until
 you discover the commands you need.
 
 Help is available within reposurgeon using the "<<help_cmd>>" command.
@@ -73,7 +73,7 @@ write repositories) include git, hg, bzr, brz, darcs, bk, RCS, and
 SRC.  For a complete list, with dependencies and technical notes, type
 "<<prefer_cmd>>" to the reposurgeon prompt.
 
-Writing to the file-oriented systems RCS, and SRC has some serious
+Writing to the file-oriented systems RCS and SRC has some serious
 limitations because those systems cannot represent all the metadata in
 a git-fast-export stream. They require rcs-fast-import as a back end;
 consult that tool's documentation for details and partial workarounds.
@@ -83,10 +83,13 @@ option of the '```<<read_cmd>>```' command and written out with the
 `--format=fossil` option of the '```<<write_cmd>>```' comment. Ignore
 patterns are not translated in either direction.
 
-SCCS, SVN and CVS are supported for read only, not write.  For CVS,
+SCCS, SVN, and CVS are supported for read only, not write.  For CVS,
 reposurgeon must be run from within a repository directory (one with a
 CVSROOT subdirectory), not a checkout. Each module becomes a
 subdirectory in the reposurgeon representation of the change history.
+
+Perforce (p4) is not directly supported, but the auxiliary program
+repotool(1) can mirror a p4 repository as a local git repository.
 
 Note that reposurgeon is a sharp enough tool to cut you.  It never
 modifies a repository in place, and it takes care not to ever write a
@@ -577,12 +580,9 @@ BitKeeper: As of version 7.3 (and probably earlier versions under
 open-source licensing) BitKeeper has fast-import and fast-export
 subcommands, and reposurgeon now knows how to use these.
 
-Perforce: According to
-https://stackoverflow.com/questions/31051732/perforce-to-git-migration[this
-Stack Overflow answer], the magic incantation is something like `git
-p4 clone --import-labels --detect-branches //depot/path/project@all`.
-This will create a live Git repository capturing your Perforce
-history.  This recipe is included for completeness; it is unknown
+Perforce: repotool can be used to mirror a remote p4 repository as a
+local Git repository, and to incrementally resync the mirror; consult
+the repotool manual page.  This support is experimental; it is unknown
 to the author what (if any) reposurgeon cleanup operations might be
 required, but a skim of Perforce documentation suggests that mapping
 Perforce user IDs to a Git-style name/address pair will be desirable.
